--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^22.5.2",
     "@types/react": "^18",
