--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
-{
-  "parser": "@typescript-eslint/parser",
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-  "rules": {
-      "@typescript-eslint/explicit-function-return-type": "warn"
-  }
-}
+// {
+//   "parser": "@typescript-eslint/parser",
+//   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+//   "rules": {
+//       "@typescript-eslint/explicit-function-return-type": "warn"
+//   }
+// }
