--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,12 @@
-// {
-//   "extends": "next/core-web-vitals"
-// }
-
-
-
 {
-  "extends": ["next/core-web-vitals"],
-  "rules": {
-    "@typescript-eslint/explicit-function-return-type": "warn"
-  }
+  "extends": "next/core-web-vitals"
 }
+
+
+
+// {
+//   "extends": ["next/core-web-vitals"],
+//   "rules": {
+//     "@typescript-eslint/explicit-function-return-type": "warn"
+//   }
+// }
