--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
-    "@prisma/client": "^5.19.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -53,13 +52,12 @@
     "@types/leaflet": "^1.9.13",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^22.5.2",
-    "@types/react": "^18",
+    "@types/react": "18.3.11",
     "@types/react-dom": "^18",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.14",
     "postcss": "^8",
-    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.4"
+    "typescript": "5.6.3"
   }
 }
